--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ventas
 spring.datasource.username=root
 spring.datasource.password=secret
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+logging.level.root = info
+logging.level.org.iesvdm = debug
+logging.level.org.springframework.jdbc = debug
